--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
     <a class="lang-button" href="#about">UA</a>
     <a class="lang-button" href="#about">RU</a>
     <a class="lang-button" href="#about">EN</a>
+    <form method="post">
+      <select class="lang-button" name="language" id="language">
+        <option value="UA">UA</option>
+        <option value="RU">RU</option>
+        <option value="EN">EN</option>
+      </select>
+    </form>
   </div>
 </body>
 </html>
